change from category to theme
