# src/main/java/at/htl/category/CategoryResource.java
@@ -1,33 +1,0 @@
-package at.htl.category;
-
-import jakarta.enterprise.context.ApplicationScoped;
-import jakarta.inject.Inject;
-import jakarta.ws.rs.GET;
-import jakarta.ws.rs.Path;
-import jakarta.ws.rs.PathParam;
-import jakarta.ws.rs.Produces;
-import jakarta.ws.rs.core.MediaType;
-
-import java.util.List;
-
-@Path("/api")
-@ApplicationScoped
-public class CategoryResource {
-
-    @Inject
-    CategoryRepository categoryRepository;
-
-    @GET
-    @Path("/category")
-    @Produces(MediaType.APPLICATION_JSON)
-    public List<Category> getCategory() {
-        return categoryRepository.getCategory();
-    }
-
-    @GET
-    @Path("/category/{id}")
-    @Produces(MediaType.APPLICATION_JSON)
-    public Category getCategoryById(@PathParam("id") Long category_id) {
-        return categoryRepository.getCategoryById(category_id);
-    }
-}
