# src/main/java/at/htl/party/PartyCreateDto.java
@@ -1,6 +1,5 @@
 package at.htl.party;
 
-// FIX: Use the Jackson version for JSON mapping
 import com.fasterxml.jackson.annotation.JsonFormat;
 import java.time.LocalDateTime;
 import java.util.List;
@@ -23,7 +22,6 @@ public record PartyCreateDto(
         Double latitude,
         Double longitude,
         String location_address,
-        Long category_id,
         String theme,
         String visibility,
         List<String> selectedUsers
